--- a/SPA_Assignment2.ipynb
+++ b/SPA_Assignment2.ipynb
@@ -27,7 +27,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 106,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Defaulting to user installation because normal site-packages is not writeable\n",
+            "Collecting kafka-python\n",
+            "  Downloading kafka_python-2.0.2-py2.py3-none-any.whl (246 kB)\n",
+            "Installing collected packages: kafka-python\n",
+            "Successfully installed kafka-python-2.0.2\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
+      "source": [
+        "pip install kafka-python\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 107,
       "metadata": {
         "id": "sq0xFbXxoxf3"
       },
@@ -39,6 +61,10 @@
         "import random\n",
         "import seaborn as sns\n",
         "from sklearn.preprocessing import MinMaxScaler\n",
+        "from kafka import KafkaProducer\n",
+        "import json\n",
+        "import time\n",
+        "import random\n",
         "# Use matplotlib in notebook output\n",
         "%matplotlib inline"
       ]
@@ -959,6 +985,83 @@
         "\n",
         "# Run the simulation for 5 steps to demonstrate\n",
         "simulate_movements(mall, customer_positions, steps=5)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Initialize Kafka producer\n",
+        "producer = KafkaProducer(\n",
+        "    bootstrap_servers='localhost:9092',  # Replace with the address of your Kafka server\n",
+        "    value_serializer=lambda v: json.dumps(v).encode('utf-8')\n",
+        ")\n",
+        "\n",
+        "# Simulate sending customer location data\n",
+        "customer_ids = [1, 2, 3, 4, 5]  # Replace with actual customer IDs\n",
+        "\n",
+        "for _ in range(100):  # Sending 100 messages as an example\n",
+        "    customer_id = random.choice(customer_ids)\n",
+        "    location = {\n",
+        "        'x': random.randint(0, 100),  # x-coordinate\n",
+        "        'y': random.randint(0, 100)   # y-coordinate\n",
+        "    }\n",
+        "\n",
+        "    message = {\n",
+        "        'customer_id': customer_id,\n",
+        "        'location': location,\n",
+        "        'timestamp': time.time()\n",
+        "    }\n",
+        "\n",
+        "    # Send message to Kafka topic named 'customer_locations'\n",
+        "    producer.send('customer_locations', message)\n",
+        "\n",
+        "    # Simulate real-time data by sleeping for a short while\n",
+        "    time.sleep(1)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "# Initialize Kafka Consumer\n",
+        "consumer = KafkaConsumer(\n",
+        "    'customer_locations',  # Topic name\n",
+        "    bootstrap_servers='localhost:9092',  # Replace with the address of your Kafka server\n",
+        "    value_deserializer=lambda m: json.loads(m.decode('utf-8'))\n",
+        ")\n",
+        "\n",
+        "# Business Logic to decide the offer\n",
+        "def decide_offer(customer_id, location):\n",
+        "    # Simulate decision logic here\n",
+        "    # For demonstration, we are sending the same offer to all customers\n",
+        "    return \"50% off on your next purchase!\"\n",
+        "\n",
+        "# Consume messages from Kafka topic\n",
+        "for message in consumer:\n",
+        "    customer_data = message.value\n",
+        "    customer_id = customer_data['customer_id']\n",
+        "    location = customer_data['location']\n",
+        "    \n",
+        "    print(f\"Received location data for Customer {customer_id}: {location}\")\n",
+        "    \n",
+        "    # Store this data if needed (e.g., in a database)\n",
+        "    # Code to store data here\n",
+        "    \n",
+        "    # Decide which offer to trigger based on customer_id and/or location\n",
+        "    offer = decide_offer(customer_id, location)\n",
+        "    \n",
+        "    # Send this offer to the customer's mobile device\n",
+        "    # Code to send offer here\n",
+        "    print(f\"Sent offer to Customer {customer_id}: {offer}\")\n",
+        "    \n",
+        "    # Simulate real-time offer placing by sleeping for a short while\n",
+        "    time.sleep(1)\n"
       ]
     }
   ],
